test/tests/stages/14_pointers/invalid_declarations/extra_credit/deref_label.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CLabel: 
                TIdentifier: lbl
                CExpression: 
                  CDereference: 
                    CVar: 
                      TIdentifier: lbl
                      None: 
                    None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
